fixed spacing on some parts of the page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ html {
 .navbar-custom-color .navbar-brand {
     color: white !important;
     font-family: 'Raleway', sans-serif;
-    font-size: 32px;
+    font-size: 28px;
 }
 
 
@@ -70,7 +70,7 @@ h1 {
 }
 
 section.landing {
-    margin: 12% 20%;
+    margin: 12% 25%;
     background-color: rgba(69, 71, 73, 0.8);
     padding: 20px;
     border-radius: 15px;
@@ -91,8 +91,8 @@ section.image-me {
 
 section.image-me > img {
 
-    height: 400px;
-    width: 400px;
+    height: 350px;
+    width: 350px;
     border-radius: 50%;
     border-style: solid;
     border-color: indianred;
@@ -102,9 +102,9 @@ section.image-me > img {
 }
 
 .about-me {
-    margin-top: -120px;
+    margin-top: -130px;
     background-color: #F0F2F5;
-    padding: 120px 20px 20px 20px;
+    padding: 120px 50px 15px 50px;
     border-radius: 15px;
 }
 
@@ -114,6 +114,9 @@ section.image-me > img {
     text-align: center;
 }
 
+.container {
+    padding: 10px 150px;
+}
 
 .skills {
     margin-top: 3%;
@@ -123,9 +126,9 @@ section.image-me > img {
 }
 
 .card-title {
-    font-size: 32px;
+    font-size: 30px;
     font-weight: 600;
-    margin-bottom: 40px;
+    margin-bottom: 25px;
 }
 
 .skill-item {
@@ -171,12 +174,10 @@ ol.carousel-indicators > li {
     margin: 4% auto;
 }
 
-.carousel-inner > p.mobile-skill-title {
+.carousel-inner p.mobile-skill-title {
     font-size: 26px;
     font-weight: 600;
     margin-bottom: 20px;
-    padding-left: 30px;
-    padding-top: 20px;;
 }
 
 #carouselExampleIndicators {
@@ -197,6 +198,10 @@ ol.carousel-indicators > li {
     background-color: #F0F2F5;
     padding: 40px;
     border-radius: 15px;
+}
+
+.work-experience-title {
+    margin-bottom: 40px;
 }
 
 .work-experience-item {
@@ -278,7 +283,7 @@ ol.carousel-indicators > li {
 .contact {
     margin: 3% -1%;
     background-color: indianred;
-    padding: 40px;
+    padding: 20px;
     border-radius: 15px;
 }
 
@@ -286,7 +291,8 @@ ol.carousel-indicators > li {
     color: white;
     font-size: 32px;
     font-weight: 600;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+    padding-left: 15px;
 }
 
 .subtitle {
@@ -335,7 +341,7 @@ ol.carousel-indicators > li {
 }
 
 .external-links > a > img {
-    height: 42px;
+    height: 32px;
 }
 
 .external-links > a > img:hover {
@@ -344,6 +350,10 @@ ol.carousel-indicators > li {
 }
 
 @media (max-width: 550px) {
+    .container {
+        padding: 5px 12px !important;
+    }
+
     .link-skill-desktop {
         display: none;
     }
@@ -388,6 +398,7 @@ ol.carousel-indicators > li {
 
     .about-me {
         margin: -120px 10px 0px 10px;
+        padding: 120px 20px 10px 20px;
     }
 
     .about-me > p {
@@ -489,11 +500,12 @@ ol.carousel-indicators > li {
 
     .contact {
         margin:5% 10px;
-        padding: 20px;
+        padding: 20px 5px;
     }
 
     .contact-title {
         font-size: 24px;
+        padding-left: 0px;
     }
 
     .subtitle {
@@ -528,5 +540,8 @@ ol.carousel-indicators > li {
     }
   }
 
-
-
+@media (max-width: 1200px) {
+    .container {
+        padding: 5px 75px;
+    }
+}
